[tool.setuptools]
packages = []

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'pytest-cov',
  'rich',
  'fastapi[standard]',
  'pytest-cov',
  'ruff'
]

[tool.pytest.ini_options]
addopts = "--cov=olympics --cov=tests --cov-report=term-missing"

